# nyaa-si-scraper

deno/: nyaasi.ts
rust/: Cargo.toml
rust/src/: main.rs
