[package]
name = "nyaasi"
version = "0.1.0"
authors = ["elianiva <dicha.arkana03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
xmlJSON = "0.2.0"
rustc-serialize = "0.3.24"
